--- a/plugin.xml
+++ b/plugin.xml
@@ -10,11 +10,11 @@
 				<param name="ios-package" value="iOSExternalAccessory" />
 			</feature>
 		</config-file>
-        <config-file target="*-Info.plist" parent="UISupportedExternalAccessoryProtocols">
+        <!-- <config-file target="*-Info.plist" parent="UISupportedExternalAccessoryProtocols">
             <array>
                 <string>uk.co.etiltd.bluetherm1</string>
             </array>
-        </config-file>
+        </config-file> -->
 		<source-file src="src/ios/iOSExternalAccessory.m" />
 		<framework src="ExternalAccessory.framework" />
 	</platform>
